<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/emi_calculator"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:textSize="20sp"
    android:textStyle="bold"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/loan_amount"
    android:layout_marginStart="10dp"
    android:textSize="20sp"
    android:textColor="@android:color/black"/>
<EditText
    android:id="@+id/loan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="enter loan amount"
    android:hint="@string/enter_your_loan_amount"
    android:layout_marginStart="10dp"
    android:inputType="number"
    android:textSize="20sp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/rate"
    android:layout_marginStart="10dp"
    android:textSize="20sp"
    android:textColor="@android:color/black"/>
<EditText
    android:id="@+id/rate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:autofillHints="enter rate amount"
    android:hint="@string/enter_your_interest_rate"
    android:inputType="number" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/no_of_monthly_installment"
    android:textSize="20sp"
    android:layout_marginStart="10dp"
    android:textColor="@android:color/black"/>
<EditText
    android:id="@+id/timeinstallment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:autofillHints="enter months number"
    android:hint="@string/enter_no_of_monthly_installment"
    android:inputType="number" />
<Button
    android:id="@+id/bmicalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/calculate"
    android:layout_marginTop="40dp"
    android:layout_marginStart="145dp"/>

<TextView
    android:id="@+id/emiresult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="110dp"
    android:text=""
    android:textSize="50sp"/>
</LinearLayout>